# e2e-desktop-xa11y-spike

./: .env.e2e  .env.e2e.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/skills/e2e-test-authoring/: SKILL.md
assets/: consult_10min.txt  consult_15min.txt  consult_1min.txt  consult_5min.txt
docs/: CONTRIBUTING.md  DESIGN.md  DEVICE_TEST_PLAN.md  FINDINGS.md  RUNNING.md  RUNNING_WINDOWS.md  SPEC_DRIVEN.md
docs/ci/: recording-e2e.yml.template
env/: prod.env  staging.env
lib/: __init__.py  audio.py  helpers.py  login.py  logout.py  platform_utils.py
pages/: __init__.py  auth.py  bulk_sync.py  device.py  firmware.py  recording.py  scribe.py  sidebar.py
scripts/: bootstrap.sh  check_audio_devices.py  diagnose_logout.py  diagnose_logout_v2.py  diagnose_logout_v3.py  dump_context_tab.py  dump_mode_menu.py  dump_page.py  dump_transcript.py  dump_upload_flow.py  explore_all.py  make_pause_resume_clips.sh  play_audio_to_device.py  probe_context_buttons.py  probe_recording.py  probe_transcript.py  setup_audio.sh  smoke.sh  test_password_input.py
templates/: test_TICKET_template.py
tests/: conftest.py  login.py  pages.py  test_bluetooth.py  test_interactive.py  test_login.py  test_smoke.py
tests/auth/: _cases.py  _flow.py  conftest.py  test_login.py  test_tcd001_login_email_password.py  test_tcd002_login_google.py  test_tcd003_login_apple.py  test_tcd014_signup_email_password.py
tests/device-connection/: test_first_onboarding_flow.py  test_reconnect_stress_flow.py  test_remote_lost_flow.py  test_startup_autoconnect_flow.py
tests/devices/: conftest.py  test_connection_state.py  test_device_card.py  test_disconnect.py  test_firmware_version.py  test_reconnect.py  test_serial_number.py
tests/navigation/: test_new_session.py  test_sidebar_nav.py
tests/recording/: _cases.py  _flow.py  conftest.py  test_10min.py  test_15min.py  test_1min.py  test_30s.py  test_5min.py  test_record_note_generation.py
tests/remote-session-recording/: test_remote_session_recording.py
tests/remote/bulk-sync/: test_bulk_sync_flow.py
tests/remote/device-connection/: conftest.py  test_connected_reconnect_flow.py  test_remote_lost_flow.py
tests/remote/ota-upgrade/: test_ota_upgrade_flow.py
tests/remote/remote-session-recording/: test_remote_session_recording.py
tests/scribe/: _scribe_cases.py  _scribe_flow.py  conftest.py  test_note_input.py  test_recording.py  test_tcd004_transcribe_audio_upload.py  test_tcd005_dictate_audio_upload.py  test_tcd006_transcribe_5min.py  test_tcd007_dictate_5min.py  test_tcd009_dictate_usb_5min.py  test_tcd011_dictate_usb_disconnect.py  test_tcd012_transcribe_usb_disconnect.py  test_tcd015_transcribe_pause_resume_context.py  test_tcd016_transcribe_pause_resume_transcript.py
tests/scribe/pause-resume/: test_tcd015_transcribe_pause_resume_context.py  test_tcd016_transcribe_pause_resume_transcript.py
tests/scribe/upload/: test_tcd008_transcribe_audio_context_upload.py
tests/scribe/usb-headset/: test_tcd010_transcribe_usb_5min.py
tests/smoke/: test_app_launches.py  test_main_elements.py
