[project]
name = "heidi-e2e-xa11y"
version = "0.1.0"
description = "Desktop E2E tests for Heidi using xa11y accessibility library"
requires-python = ">=3.11"
dependencies = [
    "xa11y>=0.9.0",
    "pytest>=9.0",
    "pytest-html>=4.0",
    "pytest-timeout>=2.3",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.setuptools]
# This is a test suite, not an importable package — don't auto-discover packages.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["templates", "scripts", "reports", ".venv", "*.egg-info"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--timeout=120",
    "--tb=short",
]
markers = [
    "smoke: basic presence/render checks",
    "auth: login / authentication flow",
    "navigation: sidebar navigation between pages",
    "scribe: scribe page / note input",
    "devices: Chronicle device / BLE related tests",
    "recording: session recording + note generation (POC APP-7808)",
    "longsession: multi-minute recording stress tests (5/10 min)",
    "slow: tests that take >10s",
]

[tool.ruff]
line-length = 100
