[project]
name = "heidi-e2e-xa11y"
version = "0.1.0"
description = "Desktop E2E tests for Heidi using xa11y accessibility library"
requires-python = ">=3.11"
dependencies = [
    "miniaudio>=1.71; sys_platform == 'win32'",
    "xa11y>=0.9.0",
    "pytest>=9.0",
    "pytest-html>=4.0",
    "pytest-timeout>=2.3",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]
# Windows audio injection routes a clip into VB-CABLE via miniaudio.
windows = ["miniaudio>=1.59"]

[tool.setuptools]
# This is a test suite, not an importable package — don't auto-discover packages.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests/scribe"]
norecursedirs = ["templates", "scripts", "reports", ".venv", "*.egg-info"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--timeout=120",
    "--tb=short",
    "--html=reports/report.html",
    "--self-contained-html",
]
markers = [
    "smoke: basic presence/render checks",
    "auth: login / authentication flow",
    "navigation: sidebar navigation between pages",
    "scribe: scribe page / note input",
    "devices: Chronicle device / BLE related tests",
    "device_connection: Chronicle connection flows (onboarding/reconnect/remove)",
    "ota: Chronicle OTA firmware upgrade",
    "remote_session: recording via the physical Chronicle device",
    "bulk_sync: Chronicle offline bulk-sync UI",
    "needs_device: requires a real Chronicle device paired/nearby (skips otherwise)",
    "needs_manual: requires a human to press the physical device button",
    "recording: session recording + note generation (POC APP-7808)",
    "upload: Scribe audio/context file upload flows (TCD004/005/008)",
    "usb_headset: Scribe capture via a USB headset (TCD009-012)",
    "longsession: multi-minute recording stress tests (5/10 min)",
    "slow: tests that take >10s",
    "long: intentionally long-running tests",
]

[tool.ruff]
line-length = 100
